made date-a-base look more like an arcade game. Added scrollbar styling and animations. Still need to fix result containers.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,35 +1,68 @@
 * {
-  background-color: #34353b;
+background-color: #040404;
+}
 
+/*STYLING FOR SCROLLBAR*/
+
+::-webkit-scrollbar {
+  width: 0.35rem;
+}
+
+/*SCROLL TRACK*/
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #131313;
+  border-radius: 10px;
+}
+
+/*SCROLL THUMB*/
+::-webkit-scrollbar-thumb {
+  background: #49fc03;
+  border-radius:5px;
 }
 
 .main-title {
-  color:white;
+  padding-top: 40px;
+  color:#49fc03;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family: 'Press Start 2P', cursive;
+  line-height: 40px;
+  width: 95vw;
+}
+
+span {
+  color: red;
+  padding: 10px;
+}
+#date-title {
+  animation: blink 1s steps(4, start) infinite;
+  font-size: 50px;
+  padding: 40px;
+}
+@keyframes blink{
+to{
+  visibility: hidden}
 }
 
 .container {
-  display: grid;
-  grid-template-rows: 2;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1r 1fr;
-  align-items: center;
-  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   font-family: 'Press Start 2P', cursive;
-
+  width: 95vw;
+  justify-content: space-around;
+  padding-top: 30px;
 }
 
 .choice-select {
-  display: grid;
-  border: solid white;
+  border: solid antiquewhite;
   border-radius: 10px;
   padding: 30px; 
   display: flex;
-  flex-direction: row;
-  color: aliceblue;
+  flex-direction: column;
+  color: antiquewhite;
+  width:200px
 }
 
 .choice-select>select {
@@ -40,31 +73,33 @@
 }
 
 .choice-select>select>option {
-  background-color: aqua;
+  background-color: antiquewhite;
   font-family: 'Press Start 2P', cursive;
-
 }
 
 .submit-btn {
-  grid-column: 2;
+  align-items: center;
   justify-items: center;
 }
 
 .submit-btn>input{
-  background-color: green;
-  padding: 20px;
+  background-color: #49fc03;
   border-radius: 10px;
   font-family: 'Press Start 2P', cursive;
-
+  font-size: 20px;
+  flex-wrap: wrap;
+  padding: 20px;
 }
 
 .submit-btn>input:hover {
   cursor: pointer;
+  
 }
 
 .main-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   color: bisque;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -72,10 +107,7 @@
 .result-container{
   border: solid white;
   border-radius: 10px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 30px;
+  margin-top: 30px;
 }
 
 .result-container>img {
@@ -88,7 +120,9 @@
   font-family: 'Press Start 2P', cursive;
   padding: 20px;
   font-size: 20px;
-  display: flex;
+  display: block;
+  align-items: center;
+  justify-content: center;
 }
 
 
